hotfix: fixed an issue where the text in a PostListItem would go outside of the box if it was too long.

--- a/guida/src/app/components/PostItem/PostItem.module.css
+++ b/guida/src/app/components/PostItem/PostItem.module.css
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
   transition: background 0.3s ease, transform 0.3s ease;
+  overflow: hidden;
 }
 
 .post:hover{
@@ -36,5 +37,5 @@
   display: flex;
   flex-direction: column;
   gap: 0.4rem;
-  width: auto;
+  width: calc(100% - 5%);
 }
